--- a/index.html
+++ b/index.html
@@ -1,64 +1,1 @@
-
-    <!DOCTYPE html> 
-    <html lang="en"> 
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-    <link rel="stylesheet" href="./src/style.css" />
-      <title>Team Profile</title>
-    </head>
-  
-    <body>
-      <header class="jumbotron">
-        <h1 class="row">My Team</h1>
-      </header>
-
-      <main class="container row">
-
-        <div class="card manager" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Matt</h5>
-            <h6 class="card-subtitle mb-2">Manager</h6>
-            <ul class="list-group">
-              <li class="list-group-item">Employee ID: 232343</li>
-              <li class="list-group-item">Email: matt@email.com</li>
-              <li class="list-group-item">Office Number: 13314</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="card engineer" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">John</h5>
-            <h6 class="card-subtitle mb-2">Engineer</h6>
-            <ul class="list-group">
-              <li class="list-group-item">Employee ID: 234324</li>
-              <li class="list-group-item">Email: john@email.com</li>
-              <li class="list-group-item">GitHub: 23234234j</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="card intern" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Jimmy</h5>
-            <h6 class="card-subtitle mb-2">Intern</h6>
-            <ul class="list-group">
-              <li class="list-group-item">Employee ID: 23432413</li>
-              <li class="list-group-item">Email: jimmy@email.com</li>
-              <li class="list-group-item">School: UT Austin</li>
-            </ul>
-          </div>
-        </div>
-
-      </main>
-      
-    </body>
-    </html>
-    
+undefined
