made some tweaks

--- a/sample-html.html
+++ b/sample-html.html
@@ -23,47 +23,48 @@
   <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">Matt Linden</h5>
-            <h6 class="card-subtitle mb-2">Manager</h6>
+            <h6 class="card-subtitle mb-2"><span class="oi oi-briefcase"></span> Manager</h6>
             <ul class="list-group">
               <li class="list-group-item">Employee ID: 12345</li>
-              <li class="list-group-item">Email: matt@email.com</li>
+              <li class="list-group-item">Email: <a href="mailto:matt@email.com">matt@email.com</a></li>
               <li class="list-group-item">Office Number: 5555</li>
             </ul>
           </div>
         </div>
   
+    
   <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">John Smith</h5>
             <h6 class="card-subtitle mb-2">Engineer</h6>
             <ul class="list-group">
-              <li class="list-group-item">Employee ID: 54321</li>
-              <li class="list-group-item">Email: john@email.com</li>
-              <li class="list-group-item">GitHub: john-coder</li>
+              <li class="list-group-item">Employee ID: 23456</li>
+              <li class="list-group-item">Email: <a href="mailto:john@email.com">john@email.com</a></li>
+              <li class="list-group-item">GitHub: <a href="https://github.com/john-coder">john-coder</a></li>
             </ul>
           </div>
         </div>
   
   <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Jake Smith</h5>
+            <h5 class="card-title">Jack Smith</h5>
             <h6 class="card-subtitle mb-2">Engineer</h6>
             <ul class="list-group">
-              <li class="list-group-item">Employee ID: 23456</li>
-              <li class="list-group-item">Email: jake@email.com</li>
-              <li class="list-group-item">GitHub: jake-coder</li>
+              <li class="list-group-item">Employee ID: 54321</li>
+              <li class="list-group-item">Email: <a href="mailto:jack@email.com">jack@email.com</a></li>
+              <li class="list-group-item">GitHub: <a href="https://github.com/jack-coder">jack-coder</a></li>
             </ul>
           </div>
         </div>
   
   <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Jennifer Smith</h5>
-            <h6 class="card-subtitle mb-2">Intern</h6>
+            <h5 class="card-title">Jim Smith</h5>
+            <h6 class="card-subtitle mb-2">Engineer</h6>
             <ul class="list-group">
-              <li class="list-group-item">Employee ID: 34567</li>
-              <li class="list-group-item">Email: jennifer@email.com</li>
-              <li class="list-group-item">School: UT Austin</li>
+              <li class="list-group-item">Employee ID: 65432</li>
+              <li class="list-group-item">Email: <a href="mailto:jim@email.com">jim@email.com</a></li>
+              <li class="list-group-item">GitHub: <a href="https://github.com/jim-coder">jim-coder</a></li>
             </ul>
           </div>
         </div>
@@ -73,8 +74,20 @@
             <h5 class="card-title">Jessica Smith</h5>
             <h6 class="card-subtitle mb-2">Intern</h6>
             <ul class="list-group">
-              <li class="list-group-item">Employee ID: 45678</li>
-              <li class="list-group-item">Email: jessica@email.com</li>
+              <li class="list-group-item">Employee ID: 65784</li>
+              <li class="list-group-item">Email: <a href="mailto:jessica@email.com">jessica@email.com</a></li>
+              <li class="list-group-item">School: UT Austin</li>
+            </ul>
+          </div>
+        </div>
+  
+  <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Jennifer Smith</h5>
+            <h6 class="card-subtitle mb-2">Intern</h6>
+            <ul class="list-group">
+              <li class="list-group-item">Employee ID: 98779</li>
+              <li class="list-group-item">Email: <a href="mailto:jennifer@email.com">jennifer@email.com</a></li>
               <li class="list-group-item">School: Texas A&M</li>
             </ul>
           </div>
