--- a/sample-html.html
+++ b/sample-html.html
@@ -36,7 +36,7 @@
   <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">John Smith</h5>
-            <h6 class="card-subtitle mb-2">Engineer</h6>
+            <h6 class="card-subtitle mb-2"><span class="oi oi-briefcase"></span> Engineer</h6>
             <ul class="list-group">
               <li class="list-group-item">Employee ID: 23456</li>
               <li class="list-group-item">Email: <a href="mailto:john@email.com">john@email.com</a></li>
@@ -47,35 +47,23 @@
   
   <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Jack Smith</h5>
-            <h6 class="card-subtitle mb-2">Engineer</h6>
-            <ul class="list-group">
-              <li class="list-group-item">Employee ID: 54321</li>
-              <li class="list-group-item">Email: <a href="mailto:jack@email.com">jack@email.com</a></li>
-              <li class="list-group-item">GitHub: <a href="https://github.com/jack-coder">jack-coder</a></li>
-            </ul>
-          </div>
-        </div>
-  
-  <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Jim Smith</h5>
-            <h6 class="card-subtitle mb-2">Engineer</h6>
-            <ul class="list-group">
-              <li class="list-group-item">Employee ID: 65432</li>
-              <li class="list-group-item">Email: <a href="mailto:jim@email.com">jim@email.com</a></li>
-              <li class="list-group-item">GitHub: <a href="https://github.com/jim-coder">jim-coder</a></li>
-            </ul>
-          </div>
-        </div>
-  
-  <div class="card" style="width: 18rem;">
-          <div class="card-body">
             <h5 class="card-title">Jessica Smith</h5>
-            <h6 class="card-subtitle mb-2">Intern</h6>
+            <h6 class="card-subtitle mb-2"><span class="oi oi-briefcase"></span> Engineer</h6>
             <ul class="list-group">
-              <li class="list-group-item">Employee ID: 65784</li>
+              <li class="list-group-item">Employee ID: 56789</li>
               <li class="list-group-item">Email: <a href="mailto:jessica@email.com">jessica@email.com</a></li>
+              <li class="list-group-item">GitHub: <a href="https://github.com/jessica-coder">jessica-coder</a></li>
+            </ul>
+          </div>
+        </div>
+  
+  <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Jack Smith</h5>
+            <h6 class="card-subtitle mb-2"><span class="oi oi-briefcase"></span> Intern</h6>
+            <ul class="list-group">
+              <li class="list-group-item">Employee ID: 87665</li>
+              <li class="list-group-item">Email: <a href="mailto:jack@email.com">jack@email.com</a></li>
               <li class="list-group-item">School: UT Austin</li>
             </ul>
           </div>
@@ -83,11 +71,11 @@
   
   <div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Jennifer Smith</h5>
-            <h6 class="card-subtitle mb-2">Intern</h6>
+            <h5 class="card-title">Zoey Smith</h5>
+            <h6 class="card-subtitle mb-2"><span class="oi oi-briefcase"></span> Intern</h6>
             <ul class="list-group">
-              <li class="list-group-item">Employee ID: 98779</li>
-              <li class="list-group-item">Email: <a href="mailto:jennifer@email.com">jennifer@email.com</a></li>
+              <li class="list-group-item">Employee ID: 98734</li>
+              <li class="list-group-item">Email: <a href="mailto:zoey@email.com">zoey@email.com</a></li>
               <li class="list-group-item">School: Texas A&M</li>
             </ul>
           </div>
